update pdz-icon, sign up management, tier list

--- a/src/app/league-zone/league-landing/league-landing.component.html
+++ b/src/app/league-zone/league-landing/league-landing.component.html
@@ -60,7 +60,12 @@
         <span class="button__text"> Rules </span>
         <span class="button__subtext"> Read them!</span>
       </button>
-
+      <button
+        [routerLink]="['/leagues', leagueInfo.leagueKey, 'tier-list']"
+        class="button button--primary"
+      >
+        <span class="button__text"> Tier List </span>
+      </button>
       @if (leagueInfo.discord) {
         <a
           [href]="'https://discord.gg/' + leagueInfo.discord"
