--- a/src/app/league-zone/league-sign-up/league-sign-up.component.html
+++ b/src/app/league-zone/league-sign-up/league-sign-up.component.html
@@ -96,7 +96,7 @@
             id="discordName"
             type="text"
             class="form-field__input"
-            placeholder="Enter Discord Name"
+            placeholder="Deoxys#0386"
             formControlName="discordName"
           />
           @if (
@@ -133,7 +133,7 @@
             id="teamName"
             type="text"
             class="form-field__input"
-            placeholder="Enter your team name"
+            placeholder="Sturdy Shedinjas"
             formControlName="teamName"
           />
           @if (
