--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,7 +2,12 @@
   <div class="hero-section">
     <div class="title-container">
       <span class="title-text mobile-hidden"> POKEMON </span>
-      <pdz-icon name="logo-small" class="title-logo"></pdz-icon>
+      <pdz-icon
+        name="logo-small"
+        [height]="64"
+        [width]="64"
+        class="title-logo"
+      ></pdz-icon>
       <span class="title-text mobile-container">
         <span class="mobile-show"> POKEMON </span>
 
