--- a/src/app/pages/top-navbar/top-navbar.component.html
+++ b/src/app/pages/top-navbar/top-navbar.component.html
@@ -48,7 +48,7 @@
       [matBadgeHidden]="!(newsBadge | async)"
       aria-label="Go to home page"
     >
-      <pdz-icon name="logo"></pdz-icon>
+      <pdz-icon name="logo" [height]="36"></pdz-icon>
     </button>
 
     <!-- Desktop navigation tabs -->
